--- a/products/static/css/root/light-root-2.css
+++ b/products/static/css/root/light-root-2.css
@@ -6,7 +6,7 @@
     --link-hover-color:             #13547a;
     --secondary-color:              #5fbdb2;
     --custom-btn-bg-color:          #5fbdb2;
-    --section-bg-color:             #f0f8ff;
+    --section-bg-color:             #d8e2eb;
     --p-color:                      #717275;
     --border-color:                 #b3dad4;
     
