--- a/products/templates/blog-pages/blog_in_category.html
+++ b/products/templates/blog-pages/blog_in_category.html
@@ -85,7 +85,7 @@
                         <div class="col-lg-8 col-12 mt-3 mx-auto">
                             {% for post in posts %}
                             {% if post.is_confirmed %}
-                            <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
+                            <div class="custom-block custom-block-topics-listing shadow-lg mb-5">
                                 <div class="d-flex">
                                     <img src="{{post.cover_image.url}}" class="custom-block-image img-fluid" style="border-radius: 20px;margin:revert-layer" alt="{{post.title}}" loading="lazy">
 
