--- a/products/templates/send_order.html
+++ b/products/templates/send_order.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <div class="row" style="flex-direction: row-reverse;">
                     <div class="col-lg-12 col-12">
-                        <h3 class="mb-4 pb-2">جهت ارسال محصول اطلاعات زیر را وارد کنید</h3>
+                        <h3 class="mb-4">جهت ارسال محصول اطلاعات زیر را وارد کنید</h3>
                     </div>
 
                     <div class="col-lg-5 col-12 mx-auto mt-5 mt-lg-5" style="text-align: center;margin-top: -60px !important;">
