--- a/products/templates/blog-pages/blog_index.html
+++ b/products/templates/blog-pages/blog_index.html
@@ -82,7 +82,7 @@
 
                         <div class="col-lg-8 col-12 mt-3 mx-auto">
                             {% for ctg in ctgs %}
-                            <div class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5">
+                            <div class="custom-block custom-block-topics-listing shadow-lg mb-5">
                                 <div class="d-flex">
                                     
                                     <img src="{% if ctg.photo %}{{ctg.photo.url}}{% endif %}" class="custom-block-image img-fluid" style="border-radius: 20px;margin:revert-layer" alt="{{ctg.title}}" loading="lazy">
