--- a/products/templates/buy_product.html
+++ b/products/templates/buy_product.html
@@ -60,7 +60,7 @@
             <div class="container" style="text-align: center;">
                 <div class="row" style="flex-direction: column;align-items: center;">
                     <div class="col-lg-12 col-12">
-                        <h3 class="mb-4 pb-2">لطفا مقدار محصول جهت سفارش را وارد کنید</h3>
+                        <h3 class="mb-4">لطفا مقدار محصول جهت سفارش را وارد کنید</h3>
                     </div>
 
                     <div class="col-lg-6 col-12 mx-auto mt-5 mt-lg-0" style="text-align: center;">
