--- a/products/templates/send_ticket.html
+++ b/products/templates/send_ticket.html
@@ -78,7 +78,7 @@
     <section class="section-padding section-bg">
         <div class="container">
             <div class="col-lg-12 col-12">
-                <h4 class="mb-4 pb-2" style="padding-right: 0px;">{{ text }}</h4>
+                <h4 class="mb-4" style="padding-right: 0px;">{{ text }}</h4>
             </div>
             <div class="row" id="support-rows" style="flex-direction: row;">
                 <div class="col-lg-6 col-12">
